  encoding.

- Patch #1673759: add a missing overflow check when formatting floats
  with %G.

- Patch #1733960: Allow T_LONGLONG to accept ints.

- Prevent expandtabs() on string and unicode objects from causing a segfault
  when a large width is passed on 32-bit platforms.

- Bug #1733488: Fix compilation of bufferobject.c on AIX.


Library
-------

- Bug #1777530: ctypes.util.find_library uses dump(1) instead of
  objdump(1) on Solaris.

- Bug #1153: repr.repr() now doesn't require set and dictionary items
  to be orderable to properly represent them.

- Bug #1709599: Run test_1565150 only if the file system is NTFS.

- When encountering a password-protected robots.txt file the RobotFileParser
  no longer prompts interactively for a username and password (bug 813986).

- TarFile.__init__() no longer fails if no name argument is passed and
  the fileobj argument has no usable name attribute (e.g. StringIO).

- Reverted the fix for bug #1548891 because it broke compatibility with
  arbitrary read buffers. Added a note in the documentation.

- GB18030 codec now can encode additional two-byte characters that
  are missing in GBK.

- Bug #1704793: Raise KeyError if unicodedata.lookup cannot
  represent the result in a single character.

- Change location of the package index to pypi.python.org/pypi

- Bug #1701409: Fix a segfault in printing ctypes.c_char_p and
  ctypes.c_wchar_p when they point to an invalid location.  As a
  sideeffect the representation of these instances has changed.

- Bug #1734723: Fix repr.Repr() so it doesn't ignore the maxtuple attribute.

- Bug #1728403: Fix a bug that CJKCodecs StreamReader hangs when it
  reads a file that ends with incomplete sequence and sizehint argument
  for .read() is specified.

- Bug #1730389: Have time.strptime() match spaces in a format argument with
  ``\s+`` instead of ``\s*``.

- SF 1668596/1720897: distutils now copies data files
  even if package_dir is empty.
